--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,8 @@ scipy = "*"
 torch = "*"
 jupyterlab = "*"
 seaborn = "*"
+category-encoders = "*"
+missingno = "*"
 
 [requires]
 python_version = "3.7"
