More practice with basics while updating print(fiction)

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,6 @@ ipython = "*"
 ipykernel = "*"
 beautifulsoup4 = "*"
 fake-useragent = "*"
-flake8 = "*"
 matplotlib = "*"
 mypy = "*"
 numpy = ">=1.17.4"
@@ -36,6 +35,8 @@ jupyterlab = "*"
 seaborn = "*"
 category-encoders = "*"
 missingno = "*"
+plotly = "*"
+pandas-profiling = "*"
 
 [requires]
 python_version = "3.7"
