First chapter of cpp crash course

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,41 @@ ref_code/
 # === Private directories === #
 *_/
 
+# === C++ Template from GitHub === #
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
 # Compiled source
 *.com
 *.class
