Updated packages and deleted 30secs website directory

--- a/Pipfile
+++ b/Pipfile
@@ -42,6 +42,7 @@ squarify = "*"
 spacy = "==2.2.4"
 nltk = "*"
 psycopg2-binary = "*"
+airtable-python-wrapper = "*"
 
 [requires]
 python_version = "3.7"
